# WordHunter

./: .gitattributes  .gitignore  BUILD.md  COMMERCIAL-LICENSE.md  LICENSE  OCR-THIRD-PARTY-LICENSES.html  README.md  RELEASE_NOTES_0.2.7.4.md  RELEASE_NOTES_0.2.7.5.md  THIRD-PARTY-LICENSES.html  THIRD-PARTY-NOTICES.md  TODO.md  build.bat  build.sh  build_cython.bat  build_cython.py  build_linux_wsl.bat  com.wordhunter.app.yml  index.html  package-lock.json  package.json  site.css  stylelint.config.mjs  tsconfig.check-js.json  tsconfig.json
.cargo/: config.toml
.github/workflows/: artifact-validation.yml  aur-validation.yml  nix-validation.yml  package-store-validation.yml  snap-validation.yml  validate.yml
.kilo/: kilo.jsonc
docs/: course-books-todo.md  frontend-reliability-audit.md  platform-layout.md  release-validation.md  typescript-migration.md
docs/android/: google-play-todo.md  pocket-port.md
docs/releases/: 1.0.5-rc.1.md  1.0.5-rc.10.md  1.0.5-rc.2.md  1.0.5-rc.3.md  1.0.5-rc.4.md  1.0.5-rc.5.md  1.0.5-rc.6.md  1.0.5-rc.7.md  1.0.5-rc.8.md  1.0.5-rc.9.md  1.0.5.md  1.0.6.md  1.0.7.1.md  1.0.7.md  1.0.8.md
flatpak/: cargo-sources.json  com.wordhunter.app.desktop  com.wordhunter.app.metainfo.xml
flatpak/patches/: sentencepiece-sys-cstdint.patch
frontend-tests/: books-loading.test.js  profile-save.test.js  reader-srs-features.test.js  sm2.test.js  stats-cache.test.js  tokenizer-stats.test.js  tts.test.js
frontend-tests/android/: helpers.js  pocket-bridges.test.js  pocket-layout.test.js  pocket-navigation.test.js  pocket-packaging.test.js  pocket-platform.test.js  pocket-reader.test.js
frontend-tests/desktop/: desktop-reader.test.js  edge-tts.test.js
frontend-tests/shared/: article-suggestions.test.js  book-counter-oracle.test.js  books-loading.test.js  catalog-title.test.js  custom-text.test.js  flashcard-gestures.test.js  focused-regressions.test.js  heatmap.test.js  i18n-coverage.test.js  import-cache.test.js  keyboard-shortcuts.test.js  (+32 more)
scripts/: build-flatpak.sh  build-frontend.mjs  build-linux-native.sh  build-macos.sh  build.bat  inspect-artifact.mjs  install-flatpak-local.sh  update-flatpak-cargo-sources.sh  update-third-party-licenses.sh  validate-json-i18n.mjs  validate.sh  windows-runtime.ps1
snap/: snapcraft.yaml
src/: requirements.txt  run.py
src-tauri/: Cargo.toml  about.hbs  about.toml  build.rs  tauri.android.conf.json  tauri.conf.json  tauri.linux-bundle.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/ocr-runner/: Cargo.toml  build.rs
src-tauri/ocr-runner/src/: main.rs
src-tauri/ocr-runtime/: README.md  prepare-runtime.ps1
src-tauri/src/: cloud_sync.rs  external_translator.rs  handlers.rs  http.rs  lib.rs  main.rs  offline_translator.rs  paths.rs  pdf_ocr.rs  popup.rs  proxy.rs  response.rs  router.rs  server.rs  subtitles.rs  sync_assistant.rs  syncthing_manager.rs  tokenizer.rs  tts.rs  update.rs  vocab_export.rs  vocab_index.rs  youglish.rs  youtube_captions.rs
src-tauri/src/ebook/: calibre.rs  epub.rs  mod.rs  text.rs
src-tauri/src/offline_translator/translator/: bpe.rs  ct2.rs  mod.rs  models.rs  package.rs  ui.rs
src-tauri/src/pdf_ocr/: mod.rs  runner.rs
src-tauri/src/platform/: android.rs  mod.rs  web_app.rs
src-tauri/src/platform/android_backend/: offline_translator.rs  pdf_ocr.rs  popup.rs  tts.rs
src-tauri/src/srs/: date.rs  fsrs.rs  mod.rs  sm2.rs
src-tauri/src/store/: books.rs  db.rs  durable.rs  media_assets.rs  mod.rs  record_files.rs  snapshot.rs  vocab_file.rs
src-tauri/src/store/fixtures/: legacy-0.3.5-book-metadata.json  legacy-0.3.5-book-text.txt  legacy-0.3.5-vocab.json
src-tauri/src/tests/ebook/: tests.rs
src-tauri/src/tests/http_boundary/: tests.rs
src-tauri/src/tests/offline_translator/: tests.rs
src-tauri/src/tests/paths/: tests.rs
src-tauri/src/tests/srs/: tests.rs
src-tauri/src/tests/store_sync/: tests.rs
src-tauri/src/tests/subtitles/: tests.rs
src-tauri/src/tests/tokenizer/: tests.rs
src-tauri/src/tests/tts/: tests.rs
src-tauri/src/tests/update/: tests.rs
src-tauri/src/tests/vocab_export/: tests.rs
src-tauri/src/tests/vocab_index/: tests.rs
src-tauri/src/tests/youglish/: tests.rs
src-tauri/src/tests/youtube_captions/: tests.rs
src-tauri/src/vocab_export/: filter.rs  handle.rs  tsv.rs
src-tauri/src/vocab_index/: cache_key.rs  handle.rs  hash.rs  index.rs  stats.rs
types/: wordhunter-browser.d.ts
(+302 files in other folders)
